syntax = "proto3";

package whatsapp;

option go_package= "./whatsapp";

service WhatsappService{
  rpc SendOrderCustomerMessage(SendOrderCustomerMessageRequest) returns (SendOrderCustomerMessageResponse);
  rpc SendOrderBusinessMessage(SendOrderBusinessMessageRequest) returns (SendOrderBusinessMessageResponse);
  rpc CreateBusinessPhone(CreateBusinessPhoneRequest) returns (CreateBusinessPhoneResponse);
  rpc UpdateBusinessPhone(UpdateBusinessPhoneRequest) returns (UpdateBusinessPhoneResponse);
  rpc GetBusinessPhoneByCompanyId(GetBusinessPhoneByCompanyIdRequest) returns (GetBusinessPhoneByCompanyIdResponse);
}

message SendOrderCustomerMessageRequest {
  int64 companyId = 1;
  string toPhone = 2;
  string customerName = 3;
  repeated OrderProductRequest products = 4;
}

message SendOrderCustomerMessageResponse {
  int64 status = 1;
  string error = 2;
}

message SendOrderBusinessMessageRequest {
  int64 companyId = 1;
  string customerName = 2;
  string contactNumber = 3;
  repeated OrderProductRequest products = 4;
}

message SendOrderBusinessMessageResponse {
  int64 status = 1;
  string error = 2;
}

message OrderProductRequest {
  string name = 1;
  uint64 quantity = 2;
  uint64 price = 3;
}

message CreateBusinessPhoneRequest {
  int64 companyId = 1;
  string phone = 2;
}

message CreateBusinessPhoneResponse {
  int64 status = 1;
  string error = 2;
}

message UpdateBusinessPhoneRequest {
  int64 companyId = 1;
  string phone = 2;
}

message UpdateBusinessPhoneResponse {
  int64 status = 1;
  string error = 2;
}

message GetBusinessPhoneByCompanyIdRequest{
  int64 companyId = 1;
}

message GetBusinessPhoneByCompanyIdResponse{
  int64 id = 1;
  int64 companyId = 2;
  string phone = 3;
  int64 status = 4;
  string error = 5;
}